# ffp-3.19-custom

./: AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  tutorial.in
examples/: Figure_1a_consensus  Figure_1a_tree  Figure_1b_consensus  Figure_1b_tree  GetEcoliGenomes  Makefile.am  Makefile.in  README  ecoli_genomes.list
man/: Makefile.am  Makefile.in  ffpaa.1.in  ffpboot.1.in  ffpcol.1.in  ffpcomplex.1.in  ffpdf.1.in  ffpfilt.1.in  ffpjsd.1.in  ffpmerge.1.in  ffpre.1.in  ffpreprof.1.in  ffprwn.1.in  ffpry.1.in  ffpsubnam.1.in  ffptree.1.in  ffptxt.1.in  ffpvocab.1.in  ffpvprof.1.in
scripts/: Makefile.am  Makefile.in  ffpdf.in  ffpgui.in  ffpreprof.in  ffpsubnam.in  ffpvprof.in
src/: Makefile.am  Makefile.in  cdfmacros.h  codon.h  ffpaa.c  ffpboot.c  ffpcol.c  ffpcomplex.c  ffpfilt.c  ffpjsd.c  ffpmerge.c  ffpre.c  ffprwn.c  ffpry.c  ffpry.h  ffptree.c  ffptxt.c  ffpvocab.c  hash.c  hash.h  hashroll.c  hashroll.h  mask.c  mask.h  parse_features.c  parse_features.h  sighandle.c  sighandle.h  utils.c  utils.h  vstring.h
tests/: Makefile.am  Makefile.in  ecoli  ecoli.2  ecolitest.sh  faalist.txt  ffpaa_test_basic.sh  ffpaa_test_d.sh  ffpaa_test_f.sh  ffpaa_test_m.sh  ffpaa_test_stdin.sh  ffpaa_test_w.sh  ffpboot_test_stdin.sh  ffpcol_test_stdin.sh  ffpcomplex_test_stdin.sh  ffpjsd_test.sh  ffpmerge_test.sh  ffpre_test.sh  ffpreprof_test_basic.sh  ffprwn_test.sh  ffprwn_test_stdin.sh  ffprwn_test_stdin2.sh  ffpry_test_basic.sh  ffpry_test_d.sh  ffpry_test_f.sh  ffpry_test_fidelity.sh  ffpry_test_fidelity2.sh  ffpry_test_l.sh  ffpry_test_m.sh  ffpry_test_r.sh  ffpry_test_stdin.sh  ffpry_test_w.sh  ffptxt_test.sh  ffpvocab_test.sh  ffpvprof_test_basic.sh  fnalist.txt  test1.faa  test1.fna  test2.faa  test2.fna  (+5 more)
