TESTS = ffpaa_test_basic.sh \
	ffpaa_test_stdin.sh \
	ffpaa_test_d.sh \
	ffpaa_test_f.sh \
	ffpaa_test_m.sh \
	ffpaa_test_w.sh \
	ffpjsd_test.sh \
       	ffpmerge_test.sh \
       	ffpre_test.sh \
       	ffprwn_test.sh \
       	ffpry_test_basic.sh \
	ffpry_test_stdin.sh \
	ffpry_test_l.sh \
	ffpry_test_d.sh \
	ffpry_test_f.sh \
	ffpry_test_m.sh \
	ffpry_test_r.sh \
	ffpry_test_w.sh \
       	ffpvocab_test.sh \
       	ffpvprof_test_basic.sh \
       	ffpreprof_test_basic.sh \
	ffpboot_test_stdin.sh \
	ffpcol_test_stdin.sh \
	ffpcomplex_test_stdin.sh \
	ffprwn_test_stdin.sh \
	ffprwn_test_stdin2.sh \
	ffptxt_test.sh \
	ffpry_test_fidelity.sh \
	ffpry_test_fidelity2.sh

dist_check_SCRIPTS = ffpaa_test_basic.sh \
		     ffpaa_test_stdin.sh \
		     ffpaa_test_d.sh \
		     ffpaa_test_f.sh \
		     ffpaa_test_m.sh \
		     ffpaa_test_w.sh \
		     ffpjsd_test.sh \
		     ffpmerge_test.sh \
		     ffpre_test.sh \
		     ffprwn_test.sh \
		     ffpry_test_basic.sh \
		     ffpry_test_stdin.sh \
		     ffpry_test_l.sh \
		     ffpry_test_d.sh \
		     ffpry_test_f.sh \
		     ffpry_test_m.sh \
		     ffpry_test_r.sh \
		     ffpry_test_w.sh \
		     ffpvocab_test.sh \
       		     ffpvprof_test_basic.sh \
       	             ffpreprof_test_basic.sh \
		     ffpboot_test_stdin.sh \
		     ffpcol_test_stdin.sh \
		     ffpcomplex_test_stdin.sh \
		     ffprwn_test_stdin.sh \
		     ffprwn_test_stdin2.sh \
		     ffptxt_test.sh \
		     ffpry_test_fidelity.sh \
		     ffpry_test_fidelity2.sh

EXTRA_DIST = test1.fna test2.fna test3.fna test4.fna \
             test5.fna test1.faa test2.faa test3.faa \
	     test4.faa faalist.txt fnalist.txt ecoli \
	     ecoli.2 ecolitest.sh


#do_subst = sed -e 's,\[@\]VERSION\[@\],$(PACKAGE_VERSION),g'

# Must also 'compile' two shell scripts

#ffpreprof_test_basic.sh :  Makefile

#	$(do_subst) < ../scripts/ffpreprof.in > ffpreprof.tmp
#	chmod +x ffpreprof.tmp
#	mv ffpreprof.tmp ../scripts/ffpreprof

#ffpvprof_test_basic.sh :  Makefile

#	$(do_subst) < ../scripts/ffpvprof.in > ffpvprof.tmp
#	chmod +x ffpvprof.tmp
#	mv ffpvprof.tmp ../scripts/ffpvprof



